Got program to write to one buffer

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /firmware/PTGv1.X/build/default/
 /firmware/PTGv1.X/dist/default/
+/firmware/PTGv1.X/PTGv1.X/build/
+/firmware/PTGv1.X/PTGv1.X/dist/
